<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_name_home"
        android:textSize="@dimen/txt_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_main"
        android:maxLines="2"
        android:padding="@dimen/dp10"
        android:text="@string/app_name"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp1"
            android:layout_weight="1"
            android:background="@color/White"
            android:gravity="center"
            android:maxLines="2"
            android:minLines="2"
            android:paddingLeft="@dimen/dp2"
            android:paddingTop="@dimen/dp5"
            android:paddingRight="@dimen/dp2"
            android:paddingBottom="@dimen/dp5"
            android:text="@string/txt_title_gia_book"
            android:textColor="@color/app_main" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp1"
            android:layout_weight="1"
            android:background="@color/White"
            android:gravity="center"
            android:maxLines="2"
            android:minLines="2"
            android:paddingLeft="@dimen/dp2"
            android:paddingTop="@dimen/dp5"
            android:paddingRight="@dimen/dp2"
            android:paddingBottom="@dimen/dp5"
            android:text="@string/txt_title_chiphi_tong"
            android:textColor="@color/app_main" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/White"
            android:gravity="center"
            android:maxLines="2"
            android:minLines="2"
            android:paddingLeft="@dimen/dp2"
            android:paddingTop="@dimen/dp5"
            android:paddingRight="@dimen/dp2"
            android:paddingBottom="@dimen/dp5"
            android:text="@string/txt_title_loinhuan"
            android:textColor="@color/app_main" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/dp1"
        android:id="@+id/rcv_list_report_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>